# study-assistant

./: .gitattributes  pyproject.toml
app/: main.py
app/api/: summarize.py
app/services/: pdf_summary.py
